clusters/production/jellysweep/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellysweep
spec:
  type: ClusterIP
  ports:
    - port: 3002
      targetPort: jellysweep
  selector:
    app: jellysweep
