clusters/production/jellysweep/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellysweep
spec:
  parentRefs:
    - name: https
      namespace: kgateway-system
  hostnames:
    - "jellysweep.production.rpcu.lan"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jellysweep
          port: 3002
